--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
             <div class="advantages__item">
                 <img src="icons/6.png" alt="shoe" class="advantages__icon">
                 <div class="advantages__subtitle">Учим бегать</div>
-                <div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                <div class="advantages__descr">1Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
             </div>
         </div>
         </div>
