--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,11 @@
             </div>
 
             <form action="#">
-                <input placeholder="Ваше имя" type="text">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button>заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
     </div>
