--- a/src/index.html
+++ b/src/index.html
@@ -105,11 +105,19 @@
     </section>
 
     <section class="carousel">
-        <div class="carousel__inner">
-            <div>your content</div>
-            <div>your content</div>
-            <div>your content</div>
-          </div>
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/watch2.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/watch3.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/watch4.jpg" alt="slide">
+                </div>
+              </div>
+        </div>
     </section>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
