--- a/src/index.html
+++ b/src/index.html
@@ -428,8 +428,23 @@
                 </div>
             </div>
         </div>
-
     </section>
+
+    <footer class="footer">
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430307895784!2d37.64441571331083!3d55.76839799067657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1693333115087!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phon" href="tel:84999228974">84999228974</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/icon1.png" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/icon2.png" alt="instagramm"></a>
+                <a href="#" class="footer__social-item"><img src="icons/icon3.png" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
+
+    
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
