--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="advantages__item">
-                <img src="icons/5.png" alt="health" class="advantages__icon">
+                <img src="icons/5.png" alt="health" class="advantages__icon advantages__icon_animated">
                 <div class="advantages__subtitle">Заботимся о здоровье</div>
                 <div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вами Вашим близким!</div>
             </div>
